--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -11,14 +11,14 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse" uib-collapse="vm.navCollapsed" ng-switch="vm.isAuthenticated()">
             <ul class="nav navbar-nav navbar-right">
-                <li ui-sref-active="active">
+                <li ui-sref-active="active" ng-show="vm.isAuthenticated()">
                     <a ui-sref="home" ng-click="vm.navCollapsed = true">
                         <span class="glyphicon glyphicon-home"></span>
-                        <span class="hidden-sm">Home</span>
+                        <span class="hidden-sm">Test</span>
                     </a>
                 </li>
                 <!-- jhipster-needle-add-element-to-menu - JHipster will add new menu items here -->
-                <li ng-class="{active: vm.$state.includes('entity')}" ng-switch-when="true" uib-dropdown class="dropdown pointer">
+                <li ng-class="{active: vm.$state.includes('entity')}" ng-switch-when="true" uib-dropdown class="dropdown pointer" ng-show="vm.isAuthenticated()">
                     <a class="dropdown-toggle" uib-dropdown-toggle href="" id="entity-menu">
                         <span>
                             <span class="glyphicon glyphicon-th-list"></span>
@@ -29,10 +29,21 @@
                         </span>
                     </a>
                     <ul class="dropdown-menu" uib-dropdown-menu>
+                        <li ui-sref-active="active" ><a ui-sref="tweet" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span >Tweet</span></a></li>
                         <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
                     </ul>
                 </li>
-                <li ng-class="{active: vm.$state.includes('account')}" uib-dropdown class="dropdown pointer">
+				<li ui-sref-active="active" ng-switch-when="false"  ng-show="!vm.isAuthenticated()"><a href=""
+					ng-click="vm.login()" id="login" data-toggle="collapse"
+					data-target=".navbar-collapse.in"><span
+						class="glyphicon glyphicon-log-in"></span> &#xA0;<span>Sign
+							in</span></a></li>
+				<li ui-sref-active="active" ng-switch-when="false"  ng-show="!vm.isAuthenticated()"><a
+					ui-sref="register" data-toggle="collapse"
+					data-target=".navbar-collapse.in"><span
+						class="glyphicon glyphicon-plus-sign"></span> &#xA0;<span>Register</span></a></li>
+				<li ng-class="{active: vm.$state.includes('account')}" uib-dropdown class="dropdown pointer"  ng-show="vm.isAuthenticated()">
                     <a class="dropdown-toggle" uib-dropdown-toggle href="" id="account-menu">
                         <span>
                             <span class="glyphicon glyphicon-user"></span>
